<resources>
    <string name="app_name">Assessment2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="add_car">Add Car</string>
    <string name="car_name">Car Name</string>
    <string name="histori">Histori</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="list_mobil">List Mobil</string>
    <string name="belum_ada_data_mobil">Belum ada data Mobil</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_hapus">Hapus?</string>
    <string name="bagikan_template">Nama mobil: %1$s\nTipe: %2$s\nHarga: %3$s</string>
    <string name="switch_layout">List</string>
    <string name="koneksi_error">koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data otomatis</string>
    <string name="notif_title">Ada data baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>

    <array name="car_type">
        <item>Minibus</item>
        <item>Bus</item>
        <item>Truk</item>
    </array>
</resources>